--- a/OCRTHINGEE/OCRTHINGEE.csproj
+++ b/OCRTHINGEE/OCRTHINGEE.csproj
@@ -192,6 +192,9 @@
     <None Include="EliteDataSet.xss">
       <DependentUpon>EliteDataSet.xsd</DependentUpon>
     </None>
+    <None Include="Eurostile.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="OCRTHINGEE_TemporaryKey.pfx" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
