--- a/OCRTHINGEE/OCRTHINGEE.csproj
+++ b/OCRTHINGEE/OCRTHINGEE.csproj
@@ -132,6 +132,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckAddWordForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CheckAddWordForm.Designer.cs">
+      <DependentUpon>CheckAddWordForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConsumerItemsList.cs" />
     <Compile Include="Coord.cs" />
     <Compile Include="EliteDataSet.Designer.cs">
@@ -162,6 +168,9 @@
     </Compile>
     <Compile Include="station.cs" />
     <Compile Include="Tesseract.cs" />
+    <EmbeddedResource Include="CheckAddWordForm.resx">
+      <DependentUpon>CheckAddWordForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OCRThingee.resx">
       <DependentUpon>OCRThingee.cs</DependentUpon>
     </EmbeddedResource>
